Inferno - Deal with the Devil

--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -253,7 +253,7 @@ msgid ""
 "\\textbf{\\MakeUppercase{Note:}} Before placing the Near Tiles, separate them into 2 piles (with and without an Obelisk). Place them alternately so that the Tiles with an Obelisk are not placed adjacent to each other.\n"
 "\n"
 msgstr ""
-"\\textbf{\\MakeUppercase{Poznámka:}} Před umístěním Blízkých Dílků je rozdělte do 2 hromádek (s Obeliskem a bez něj). Umísťujte je střídavě tak, aby dílky s Obeliskem nebyly umístěny vedle sebe.\n"
+"\\textbf{\\MakeUppercase{Poznámka:}} Před umístěním Blízkých Dílků je rozdělte do 2 hromádek (s Obeliskem a bez něj). Umísťujte je střídavě tak, aby Dílky s Obeliskem nebyly umístěny vedle sebe.\n"
 "\n"
 
 #. type: multicols*
@@ -416,9 +416,9 @@ msgstr ""
 "  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, nemůže použít kartu Dovednosti Diplomacie k Naverbování Neutrálních \\svgunit{azure} Jednotek.\n"
 "  \\item Kdykoli je vytažena karta Prohlášení Astrologů nebo karta Události, která umožňuje Naverbování Neutrálních Jednotek, ignorujte ji a vytáhněte kartu novou.\n"
 "  \\item Hráči mohou použít svůj Balíček Síly a Magie při placení zlata na obranu městské oblasti své Frakce.\n"
-"  \\item Ignorujte střety v Boji na poli s Grálem.\n"
+"  \\item Ignorujte střety v Boji na Poli s Grálem.\n"
 "  \\item Hráči nemohou Navštívit Pole se Žetonem Grálu, dokud již nenavštívili alespoň dva Obelisky nebo Žeton Grálu nebyl získán jakýmkoli Hrdinou alespoň jednou.\n"
-"  \\item Aby hráč získal Žeton Grálu, musí jeho Hrdina zaplatit 2 MP na poli s Grálem.\n"
+"  \\item Aby hráč získal Žeton Grálu, musí jeho Hrdina zaplatit 2 MP na Poli s Grálem.\n"
 "  \\item Pokud hráč nemá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, musí okamžitě po získání Žetonu Grálu odstranit kartu Jednotky své Frakce z Balíčku Jednotek. Tento efekt může nastat pouze jednou na hráče.\n"
 "  \\item Pokud jiný Hrdina porazí Hrdinu s Žetonem Grálu, také získá Žeton Grálu.\n"
 "  \\item Pokud se Hrdina s Žetonem Grálu vzdá, Žeton Grálu je umístěn na Pole, kde se Hrdina vzdal.\n"
