--- a/translations/emerald_island.tex/cs.po
+++ b/translations/emerald_island.tex/cs.po
@@ -279,7 +279,7 @@ msgid ""
 "Flag all Mines and Settlements. (Don't forget the Building Materials Mine in Tile I. Each Tile II--III contains one Mine or Settlement with a Level III fight.)\n"
 "\n"
 msgstr ""
-"Obsaďte všechny Doly a Osady. (Nezapomeňte na Důl na Stavební Materiály na Dílku I. Každý Dílek II--III obsahuje jeden Důl nebo Osadu s bojem na Úrovni III.)\n"
+"Obsaďte všechny Doly a Osady. (Nezapomeňte na Důl na Stavební Materiály na Dílku I. Každý Dílek II--III obsahuje jeden Důl nebo Osadu s Bojem na Úrovni III.)\n"
 "\n"
 
 #. type: multicols*
@@ -345,7 +345,7 @@ msgstr ""
 "    \\end{itemize}\n"
 "    \\item Pokud nemáte žádné Jednotky ve svém Balíčku Jednotek (po bitvě nebo pokud si neuchováte alespoň jednu Jednotku), vraťte všechny své Jednotky do Balíčku Jednotek své Frakce (i když jiný hráč má jednu nebo více vašich Jednotek). To zahrnuje i Jednotky, které jste dříve předali jinému hráči.\n"
 "    \\item Když jste ve Městě jiného hráče, můžete Naverbovat nebo Posílit jejich Jednotky, buď pro daného hráče nebo pro sebe. Potřebujete k tomu povolení druhého hráče, a musí k tomu být postavena odpovídající Obydlí nebo Citadela.\n"
-"    \\item Pro poslední boj o Důl/Osadu přidejte \\svgunit{golden} Neutrální Jednotku. Pro tento boj máte neomezený počet Tahů. K přeskočení tohoto boje nemůžete použít Expertní Diplomacii!\n"
+"    \\item Pro poslední Boj o Důl/Osadu přidejte \\svgunit{golden} Neutrální Jednotku. Pro tento Boj máte neomezený počet Tahů. K přeskočení tohoto Boje nemůžete použít Expertní Diplomacii!\n"
 "    \\item Poprvé, když dosáhnete Úrovně IV, získáte svou druhou specializaci.\n"
 "    \\item Když dosáhnete Úrovně IV, přesuňte svůj Žeton na počítadle Úrovní na Úroveň III.\n"
 "    \\item Navíc žádný hráč nemůže:\n"
