--- a/translations/sentinels.tex/cs.po
+++ b/translations/sentinels.tex/cs.po
@@ -186,7 +186,7 @@ msgid ""
 "\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
-"\\textbf{Dílky Mapy na ruce:} Každý hráč si vezme 1 náhodný Blízký (IV--V) Dílek Mapy a 1 náhodný Vzdálený (II--III) Dílek Mapy. Tyto dílky by neměly obsahovat žádné Obelisky.\n"
+"\\textbf{Dílky Mapy na ruce:} Každý hráč si vezme 1 náhodný Blízký (IV--V) Dílek Mapy a 1 náhodný Vzdálený (II--III) Dílek Mapy. Tyto Dílky by neměly obsahovat žádné Obelisky.\n"
 "\n"
 
 #. type: multicols
@@ -466,7 +466,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Hráči mohou obchodovat se surovinami, když jeden z Hrdinů aktivního hráče navštíví Tržiště nebo stojí na poli sousedícím se spojeneckým Hrdinou.\n"
+"  \\item Hráči mohou obchodovat se surovinami, když jeden z Hrdinů aktivního hráče navštíví Tržiště nebo stojí na Poli sousedícím se spojeneckým Hrdinou.\n"
 "  \\item Hrdina, který porazí nepřátelskou armádu, získá 2 \\svg{experience}.\n"
 "    Vítězný hráč hodí dvěma Kostkami Pokladu a vyřeší jednu z nich.\n"
 "  \\item Navíc žádný hráč nemůže:\n"
@@ -534,7 +534,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Nepřátelské armády se objevují na náhodném poli s Obeliskem (použijte miniatury Hrdinů z frakcí, které nejsou ve hře).\n"
+"  \\item Nepřátelské armády se objevují na náhodném Poli s Obeliskem (použijte miniatury Hrdinů z frakcí, které nejsou ve hře).\n"
 "  \\item Určete Pole s Obeliskem tím, že hodíte 2 Kostkami Útoku. Aplikujte výsledky následujícím způsobem (K1/K2), při 0 hážete znovu:\n"
 "  \\begin{itemize}\n"
 "    \\item $+1$/$+1$ = Sever\n"
@@ -542,10 +542,10 @@ msgstr ""
 "    \\item $-1$/$+1$ = Západ\n"
 "    \\item $-1$/$-1$ = Jih\n"
 "  \\end{itemize}\n"
-"  \\item V 7. a 9. kole házejte pro vyváženější rozložení pouze druhou Kostkou Útoku (K2). Pro K1 vezměte opačný výsledek hodu z předchozího Kola.\n"
+"  \\item V 7. a 9. Kole házejte pro vyváženější rozložení pouze druhou Kostkou Útoku (K2). Pro K1 vezměte opačný výsledek hodu z předchozího Kola.\n"
 "  Kola 8 a 10 jsou zcela náhodná.\n"
-"  \\item Pokud dílek, kde se má nepřítel objevit, ještě nebyl objeven, otočte jej a libovolně orientujte.\n"
-"  \\item Pokud je na poli, kde se nepřítel objeví, Hrdina, začne okamžitě boj.\n"
+"  \\item Pokud Dílek, kde se má nepřítel objevit, ještě nebyl objeven, otočte jej a libovolně orientujte.\n"
+"  \\item Pokud je na Poli, kde se nepřítel objeví, Hrdina, začne okamžitě Boj.\n"
 "  \\item Nepřátelské armády se pohybují na konci každého tahu, počínaje tahem, kdy se objevily.\n"
 "  \\item Nepřátelské armády mají 3 MP za Kolo.\n"
 "  \\item Nepřátelské armády se pohybují, jak je popsáno v pravidlech (str.\\,33), ale místo obsazování ničí vše, co jim stojí v cestě.\n"
@@ -587,7 +587,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Boj s nepřátelskými armádami přes více než jedno bojové Kolo nestojí žádné Body Pohybu.\n"
+"  \\item Boj s nepřátelskými armádami přes více než jedno Kolo Boje nestojí žádné Body Pohybu.\n"
 "  \\item Během bitvy s nepřátelskou armádou může Hrdina ustoupit kdykoliv, když se má Aktivovat přátelská Jednotka.\n"
 "    Ustupující hlavní Hrdina ztrácí všechny zbývající Body Pohybu a je vrácen do spojeneckého Města nebo Osady dle svého výběru, přičemž si ponechává všechny zbývající Jednotky.\n"
 "  \\item Ustupující sekundární Hrdinové jsou Odstraněni ze hry, ale jejich zbývající Jednotky jsou ponechány.\n"
@@ -626,8 +626,8 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item V 10. kole se objeví Armáda Bosse. Je odlišná od předchozích armád, protože je posílena z předem daného fondu Neutrálních Jednotek (posilovací fond = číslo v závorkách v tabulce níže).\n"
-"  \\item Na začátku 2. Kola Boje a každého následujícího Kola posilují zbývající armádu 2 Jednotky z promíchaného posilovacího fondu (až do maxima 5 Jednotek), aby pokračovaly v boji, dokud hráč neustoupí nebo dokud nejsou všechny Neutrální Jednotky z posilovacího fondu zabity. \\textit{Pokud je počet nepřátelských Jednotek na začátku Kola 1 nebo nižší, doplňte až do celkového počtu 4 Jednotek (tj. na desce jsou vždy 4 nebo 5 nepřátelských Jednotek po posílení, pokud jsou k dispozici).}\n"
+"  \\item V 10. Kole se objeví Armáda Bosse. Je odlišná od předchozích armád, protože je posílena z předem daného fondu Neutrálních Jednotek (posilovací fond = číslo v závorkách v tabulce níže).\n"
+"  \\item Na začátku 2. Kola Boje a každého následujícího Kola posilují zbývající armádu 2 Jednotky z promíchaného posilovacího fondu (až do maxima 5 Jednotek), aby pokračovaly v Boji, dokud hráč neustoupí nebo dokud nejsou všechny Neutrální Jednotky z posilovacího fondu zabity. \\textit{Pokud je počet nepřátelských Jednotek na začátku Kola 1 nebo nižší, doplňte až do celkového počtu 4 Jednotek (tj. na desce jsou vždy 4 nebo 5 nepřátelských Jednotek po posílení, pokud jsou k dispozici).}\n"
 "  \\item Umístěte posilující Jednotky na nepřátelskou základní linii, začněte zleva s nejnižší iniciativou (nejprve \\svg{unit_ranged} Jednotky). Pokud je to nutné, pokračujte na další řadu ve stejném pořadí.\n"
 "  \\item Když hráč ustoupí, nepřátelská armáda doplní až do \\uv{minimálního} počtu 4 Jednotek a tyto Jednotky si vezme jako výchozí do dalšího Boje.\n"
 "\\end{itemize}\n"
