--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -270,7 +270,7 @@ msgstr ""
 "  \\item 2 × Startovní (I) Dílek Mapy\n"
 "  \\item 2 × Blízký (IV--V) Dílek Mapy\n"
 "  \\item 2 × Vzdálený (II--III) Dílek Mapy\n"
-"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo miniaturu představující Draka do středu dílku\n"
+"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo miniaturu představující Draka do středu Dílku\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -301,7 +301,7 @@ msgstr ""
 "  \\item 3 × Startovní (I) Dílek Mapy\n"
 "  \\item 3 × Blízký (IV--V) Dílek Mapy\n"
 "  \\item 3 × Vzdálený (II--III) Dílek Mapy\n"
-"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo miniaturu představující Draka do středu dílku\n"
+"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo miniaturu představující Draka do středu Dílku\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -410,14 +410,14 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Pouze Hlavní Hrdina může zabít Draka.\n"
-"  \\item Závěrečná bitva s Drakem se odehrává na středovém poli Středového Dílku mapy.\n"
+"  \\item Závěrečná bitva s Drakem se odehrává na středovém Poli Středového Dílku mapy.\n"
 "    Prosím, odkažte se na pravidla setkání uvedená u vybraného Dračího Bosse.\n"
-"  \\item Při boji s Dračím Bossem ignorujte speciální schopnost Gorgony.\n"
+"  \\item Při Boji s Dračím Bossem ignorujte speciální schopnost Gorgony.\n"
 "  \\item Hrdinové nemohou ustoupit z bitev s Dračím Bossem.\n"
 "  \\item Když každý hráč navštíví Obelisk, může si vybrat, zda hodí Kostkou Pokladu nebo získá 1 \\svg{experience}.\n"
 "  \\item Hráči mohou každý Obelisk navštívit pouze jednou.\n"
 "    Poté musí na Pole umístit svou Kostičku Frakce.\n"
-"  \\item V setkání s bossem není žádný limit bojových kol.\n"
+"  \\item V setkání s bossem není žádný limit Kol Boje.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -522,8 +522,8 @@ msgstr ""
 "\\svg{defense}, což je znázorněno náhradními Kostičkami Frakce. Odstraňte "
 "je poté, co absorbují poškození. \\item Cetka: Azurový Drak zařve a přivolá "
 "ledovou bouři, která způsobí, že všechny bytosti zamrznou strachem. To má za "
-"následek, že každá Jednotka se pohybuje pouze o 1 bojový dílek za Kolo, "
-"zatímco Azurový Drak může letět na jakýkoli dílek na bojové desce. "
+"následek, že každá Jednotka se pohybuje pouze o 1 Pole za Kolo, "
+"zatímco Azurový Drak může letět na jakékoli Pole na Desce Bojiště. "
 "\\end{itemize} \\item Azurový Drak je imunní vůči všem kouzlům seslaným "
 "proti němu. \\item Posílení a vylepšení seslaná na Jednotky hráče zůstávají "
 "účinná. \\end{itemize} }"
@@ -634,7 +634,7 @@ msgstr ""
 "bojiště. Ignorujte jeho schopnost. \\item Umístěte dva Zlaté Golemy a dva "
 "Diamantové Golemy na bojiště. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
 "\\begin{itemize} \\item Na začátku každého Kola Boje zkontrolujte, zda "
-"byli v předchozím kole odstraněni nějací Golemové. Pokud ano, vyvolejte "
+"byli v předchozím Kole odstraněni nějací Golemové. Pokud ano, vyvolejte "
 "jednoho nového Diamantového nebo Zlatého Golema (vybraného náhodně) do "
 "poslední řady bojiště. \\item \\textit{Požírání Golemů:} Krystalový Drak "
 "může žrát Golemy, aby si obnovil zdraví. Během svého tahu, pokud je "
@@ -647,7 +647,7 @@ msgstr ""
 "Golemové nemají žádné další schopnosti nad rámec těch, které jsou uvedeny na "
 "jejich kartách. Slouží především jako potrava pro regeneraci zdraví "
 "Krystalového Draka. \\item Krystalový Drak má \\textit{Odvetný útok dvakrát} "
-"za bojové Kolo. \\end{itemize} }"
+"za Kolo Boje. \\end{itemize} }"
 
 #. type: Plain text
 #: clash/the_hunt.tex:235
@@ -760,7 +760,7 @@ msgstr ""
 "schopnost kontroly davu, která mu umožňuje vypustit čtyři kaluže sirné "
 "kyseliny na bojiště \\textit{na začátku} každého Kola Boje. Použijte "
 "karty Balíčku M\\&M umístěné lícem dolů k označení jejich poloh. \\item "
-"Rezavý Drak nemůže umístit kaluže na stejná Pole jako v předchozím kole. "
+"Rezavý Drak nemůže umístit kaluže na stejná Pole jako v předchozím Kole. "
 "Označte Pole náhradními Kostičkami Frakce, abyste označili, kde byly kaluže "
 "umístěny. \\item Kaluže sirné kyseliny blokují Pole bojiště a brání pohybu "
 "pouze na jedno Kolo. Slouží jako překážky jak pro hráče, tak pro Draka. "
@@ -891,7 +891,7 @@ msgstr ""
 "kouzlo je \\textit{Léčení}. \\item Pro třetí kouzlo Pohádkový Drak náhodně "
 "vybere expertní kouzlo z Balíčku kouzel, s výjimkou kouzel Mapa \\svg{map}. "
 "Pokud je vybráno kouzlo Mapa \\svg{map}, vytáhněte další kouzlo. "
-"\\end{enumerate} \\item \\textit{Šprýmař:} V prvním kole bitvy je první "
+"\\end{enumerate} \\item \\textit{Šprýmař:} V prvním Kole bitvy je první "
 "zacílený Pohádkový Drak pouhým Přeludem. Způsobuje poškození, ale zmizí z "
 "bojiště, když je zasažen nepřítelem. \\item Schopnost Dendroidů: Každý "
 "Dendroid drží klíč k síle Pohádkového Draka. Po smrti 2. Dendroida začněte "
