--- a/translations/titans_stronghold.tex/cs.po
+++ b/translations/titans_stronghold.tex/cs.po
@@ -342,8 +342,8 @@ msgid ""
 "The center of this Tile is the Titans' Stronghold.\n"
 "\n"
 msgstr ""
-"Pokud nemáte dostatek dílků VI--VII, můžete použít jiný dílek blízko dílku I.\n"
-"Střed tohoto dílku je Pevnost Titánů.\n"
+"Pokud nemáte dostatek Dílků VI--VII, můžete použít jiný Dílek blízko Dílku I.\n"
+"Střed tohoto Dílku je Pevnost Titánů.\n"
 "\n"
 
 #. type: multicols*
@@ -356,7 +356,7 @@ msgid ""
 "Kill all Units in the Titans' Stronghold (the center of Tile VI--VII next to Tiles I).\n"
 "\n"
 msgstr ""
-"Zabijte všechny Jednotky v Pevnosti Titánů (střed dílku VI--VII vedle dílků I).\n"
+"Zabijte všechny Jednotky v Pevnosti Titánů (střed Dílku VI--VII vedle Dílků I).\n"
 "\n"
 
 #. type: multicols*
@@ -456,8 +456,8 @@ msgid ""
 msgstr ""
 "\\subsection*{\\MakeUppercase{Dodatečná Pravidla}}\n"
 "\\begin{itemize}\n"
-"  \\item Pamatujte: střed dílku VI--VII vedle všech dílků I je Pevnost Titánů.\n"
-"  \\item Nikdo nesmí vstoupit do Pevnosti Titánů, dokud všechny ostatní dílky VII nejsou obsazeny kterýmkoliv hráčem.\n"
+"  \\item Pamatujte: střed Dílku VI--VII vedle všech Dílků I je Pevnost Titánů.\n"
+"  \\item Nikdo nesmí vstoupit do Pevnosti Titánů, dokud všechny ostatní Dílky VII nejsou obsazeny kterýmkoliv hráčem.\n"
 "  \\item Po poražení neutrální armády úrovně VII, místo vyřešení Pole, si hráč třikrát vybere jednu možnost z následujícího seznamu (možnost může být vybrána vícekrát):\n"
 "    \\begin{itemize}\n"
 "      \\item Jiný hráč (váš výběr) získá 5\\,\\svg{gold}\n"
@@ -470,9 +470,9 @@ msgstr ""
 "  \\item Svůj Stavební Žeton můžete použít k předání svých surovin jinému hráči.\n"
 "  \\item Dva hráči mohou použít své Stavební Žetony k výměně Artefaktů a/nebo Kouzel.\n"
 "  \\item Kdykoliv hráč navštíví Obelisk, hodí si jednou Kostkou Pokladu, jednou Kostkou Surovin a vyřeší jednu z nich.\n"
-"  \\item Když jsou všechny dílky VII (s výjimkou Pevnosti Titánů) obsazeny, náhodně vytáhněte a zamíchejte určený počet (viz další strana) karet Neutrálních Jednotek z odpovídajících Balíčků, abyste vytvořili samostatný Balíček Neutrálních Jednotek pro Pevnost Titánů (Balíček Pevnosti Titánů je někdy rozdělen na dvě části, protože určité Scénáře by jinak nebylo možné s kartami z určitých rozšíření implementovat).\n"
-"  \\item Kdykoliv Hrdina vstoupí do Pevnosti Titánů, vytáhne 5 karet z Balíčku Pevnosti Titánů místo z Balíčků karet Neutrálních Jednotek. Jednotky jsou umístěny na Desku Bojiště (viz \\uv{Rozmístění Neutrálních Jednotek} na str. 29 v základních pravidlech). Hráči se pokoušejí porazit Jednotky, které najdou v Pevnosti Titánů. Jakékoliv Neutrální Jednotky poražené během boje v Pevnosti Titánů jsou vráceny do svých příslušných Balíčků Neutrálních Jednotek místo do Balíčku Pevnosti Titánů. Jakékoliv Neutrální Jednotky, které přežijí boj v Pevnosti Titánů jsou zamíchány zpět do Balíčku Pevnosti Titánů. Pokud v tomto Balíčku není dostatek karet Jednotek, vytáhněte tolik karet Jednotek, kolik je k dispozici, a umístěte je na Desku Bojiště.\n"
-"  \\item Boj v Pevnosti Titánů nyní stojí 1 BP za prodloužení o další Kolo Boje, stejně jako boj proti Jednotkám nižší než Azurové úrovně.\n"
+"  \\item Když jsou všechny Dílky VII (s výjimkou Pevnosti Titánů) obsazeny, náhodně vytáhněte a zamíchejte určený počet (viz další strana) karet Neutrálních Jednotek z odpovídajících Balíčků, abyste vytvořili samostatný Balíček Neutrálních Jednotek pro Pevnost Titánů (Balíček Pevnosti Titánů je někdy rozdělen na dvě části, protože určité Scénáře by jinak nebylo možné s kartami z určitých rozšíření implementovat).\n"
+"  \\item Kdykoliv Hrdina vstoupí do Pevnosti Titánů, vytáhne 5 karet z Balíčku Pevnosti Titánů místo z Balíčků karet Neutrálních Jednotek. Jednotky jsou umístěny na Desku Bojiště (viz \\uv{Rozmístění Neutrálních Jednotek} na str. 29 v základních pravidlech). Hráči se pokoušejí porazit Jednotky, které najdou v Pevnosti Titánů. Jakékoliv Neutrální Jednotky poražené během Boje v Pevnosti Titánů jsou vráceny do svých příslušných Balíčků Neutrálních Jednotek místo do Balíčku Pevnosti Titánů. Jakékoliv Neutrální Jednotky, které přežijí Boj v Pevnosti Titánů jsou zamíchány zpět do Balíčku Pevnosti Titánů. Pokud v tomto Balíčku není dostatek karet Jednotek, vytáhněte tolik karet Jednotek, kolik je k dispozici, a umístěte je na Desku Bojiště.\n"
+"  \\item Boj v Pevnosti Titánů nyní stojí 1 BP za prodloužení o další Kolo Boje, stejně jako Boj proti Jednotkám nižší než Azurové úrovně.\n"
 "  \\item Navíc žádný hráč nemůže:\n"
 "  \\begin{itemize}\n"
 "    \\item Útočit na jiné Hrdiny.\n"
