Add flag to exclude caps check

--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -127,7 +127,7 @@ Clan Kreelah fails to defend Klessive against the Enemy Charging Heros attemptin
 \textbf{\nth{2} Round:}
 \begin{itemize}
   \item Read: ``Castle and AvLee armies will be at our gates soon. They must come through the volcanic corridor
-    to our east. We cannot meet them in battle on the Field, we must defend from within Kleesive, where
+    to our east. We cannot meet them in battle on the field, we must defend from within Kleesive, where  % no-check-caps
     their magic is diminished on this cursed ground.''
 \end{itemize}
 
