--- a/translations/inferno_deal_with_the_devil.tex/fr.po
+++ b/translations/inferno_deal_with_the_devil.tex/fr.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-22 23:28+0200\n"
+"POT-Creation-Date: 2024-08-26 19:17+0200\n"
 "PO-Revision-Date: 2024-07-02 09:52+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -487,7 +487,7 @@ msgid ""
 "\\textbf{\\nth{2} Round:}\n"
 "\\begin{itemize}\n"
 "  \\item Read: ``Castle and AvLee armies will be at our gates soon. They must come through the volcanic corridor\n"
-"    to our east. We cannot meet them in battle on the Field, we must defend from within Kleesive, where\n"
+"    to our east. We cannot meet them in battle on the field, we must defend from within Kleesive, where  % no-check-caps\n"
 "    their magic is diminished on this cursed ground.''\n"
 "\\end{itemize}\n"
 "\n"
