Inferno - Devilish Plan

--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -423,7 +423,7 @@ msgstr ""
 "  \\item Pokud jiný Hrdina porazí Hrdinu s Žetonem Grálu, také získá Žeton Grálu.\n"
 "  \\item Pokud se Hrdina s Žetonem Grálu vzdá, Žeton Grálu je umístěn na Pole, kde se Hrdina vzdal.\n"
 "  \\item Pokud Neutrální armáda porazí Hrdinu s Žetonem Grálu, Žeton Grálu je umístěn na Pole, kde byl Hrdina poražen.\n"
-"  \\item Pokud Hrdina s Žetonem Grálu vyvolá Městský Portál nebo použije budovu Hradní Brána Frakce Peklo, Žeton Grálu je umístěn na Pole, kde byl vyvolán kouzlo nebo použita budova.\n"
+"  \\item Pokud Hrdina s Žetonem Grálu vyvolá Městský Portál nebo použije budovu Hradní Brána Frakce Peklo, Žeton Grálu je umístěn na Pole, kde bylo Kouzlo vyvoláno nebo použita budova.\n"
 "  \\item Žeton Grálu se chová jako Trvalá karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Boje, pokud je Hrdina \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, odhoďte kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek a přidělili je nepřátelským Jednotkám.}\n"
 "  \\item Hrdina s Žetonem Grálu, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu},} může zaplatit 10 \\svg{gold} nebo 3 \\svg{valuables} na jakémkoli místě chrámové mapy, aby očistil Grál. Umístěte modrou Kostičku Frakce na Žeton Grálu, aby byl tento efekt označen.\n"
 "  \\item Jakmile je Grál očištěn, Žeton Grálu se chová jako Trvalá karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Kola Boje, pokud je Hrdina \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, odhoďte kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek.}\n"
