--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -524,7 +524,7 @@ msgstr ""
 "ledovou bouři, která způsobí, že všechny bytosti zamrznou strachem. To má za "
 "následek, že každá Jednotka se pohybuje pouze o 1 Pole za Kolo, "
 "zatímco Azurový Drak může letět na jakékoli Pole na Desce Bojiště. "
-"\\end{itemize} \\item Azurový Drak je imunní vůči všem kouzlům seslaným "
+"\\end{itemize} \\item Azurový Drak je imunní vůči všem Kouzlům seslaným "
 "proti němu. \\item Posílení a vylepšení seslaná na Jednotky hráče zůstávají "
 "účinná. \\end{itemize} }"
 
@@ -756,7 +756,7 @@ msgstr ""
 "Draka na bojiště. Ignorujte jeho schopnost. \\item Připravte čtyři náhradní "
 "karty Balíčku M\\&M k označení kaluží kyseliny. \\end{enumerate} \\medskip "
 "\\textbf{Pravidla:} \\begin{itemize} \\item Rezavý Drak je imunní vůči "
-"základním kouzlům. \\item \\textit{Korozivní Zvratky:} Rezavý Drak má mocnou "
+"základním Kouzlům. \\item \\textit{Korozivní Zvratky:} Rezavý Drak má mocnou "
 "schopnost kontroly davu, která mu umožňuje vypustit čtyři kaluže sirné "
 "kyseliny na bojiště \\textit{na začátku} každého Kola Boje. Použijte "
 "karty Balíčku M\\&M umístěné lícem dolů k označení jejich poloh. \\item "
@@ -884,21 +884,21 @@ msgstr ""
 "\\item Umístěte 1 kartu Dendroida z \\svg{silver} Balíčku neutrálních "
 "Jednotek na bojiště a umístěte 3 další karty lícem dolů, aby představovaly "
 "další 3 Dendroidy. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
-"\\begin{itemize} \\item Pohádkový Drak je imunní vůči základním kouzlům. "
-"\\item Pohádkový Drak může seslat až dvě různá kouzla za Kolo Boje. \\item "
-"Všechna kouzla jsou viditelně zobrazena vedle Desky Bojiště: "
-"\\begin{enumerate} \\item První kouzlo je \\textit{Blesk}. \\item Druhé "
-"kouzlo je \\textit{Léčení}. \\item Pro třetí kouzlo Pohádkový Drak náhodně "
-"vybere expertní kouzlo z Balíčku kouzel, s výjimkou kouzel Mapa \\svg{map}. "
-"Pokud je vybráno kouzlo Mapa \\svg{map}, vytáhněte další kouzlo. "
+"\\begin{itemize} \\item Pohádkový Drak je imunní vůči základním Kouzlům. "
+"\\item Pohádkový Drak může seslat až dvě různá Kouzla za Kolo Boje. \\item "
+"Všechna Kouzla jsou viditelně zobrazena vedle Desky Bojiště: "
+"\\begin{enumerate} \\item První Kouzlo je \\textit{Blesk}. \\item Druhé "
+"Kouzlo je \\textit{Léčení}. \\item Pro třetí Kouzlo Pohádkový Drak náhodně "
+"vybere Expertní Kouzlo z Balíčku Kouzel, s výjimkou Kouzel Mapa \\svg{map}. "
+"Pokud je vybráno Kouzlo Mapa \\svg{map}, vytáhněte další Kouzlo. "
 "\\end{enumerate} \\item \\textit{Šprýmař:} V prvním Kole bitvy je první "
 "zacílený Pohádkový Drak pouhým Přeludem. Způsobuje poškození, ale zmizí z "
 "bojiště, když je zasažen nepřítelem. \\item Schopnost Dendroidů: Každý "
 "Dendroid drží klíč k síle Pohádkového Draka. Po smrti 2. Dendroida začněte "
-"odebírat jedno kouzlo z Knihy Kouzel Pohádkového Draka, počínaje třetím "
-"kouzlem. Snižte posílení kouzel draka \\svg{empower} o 1 (počínaje "
+"odebírat jedno Kouzlo z Knihy Kouzel Pohádkového Draka, počínaje třetím "
+"Kouzlem. Snižte posílení Kouzel draka \\svg{empower} o 1 (počínaje "
 "maximálním) po poražení 2., 3. a 4. Dendroida. Když už nezbudou žádní "
-"Dendroidi, drak ztratí schopnost sesílat kouzla. \\end{itemize} }"
+"Dendroidi, drak ztratí schopnost sesílat Kouzla. \\end{itemize} }"
 
 #. type: Plain text
 #: clash/the_hunt.tex:370
